# CVM-

./: .gitignore  CMakeLists.txt  README.md  ast.cpp  ast.h  build.ps1  build.sh  compiler.cpp  compiler.h  lexer.cpp  lexer.h  main.cpp  opcodes.cpp  opcodes.h  parser.cpp  parser.h  vm.cpp  vm.h
examples/: fizzbuzz.cvm  hello.cvm  input.cvm  loop.cvm
web/: app.py  run.ps1  run.sh
web/static/: app.js  index.html  style.css
